created banar section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="inter">
-    
+    <header>
+        <nav>
+            <div class="logo-image">
+                <img src="images/logo-navbar.png" alt="">
+            </div>
+                <ul class="menu">
+                    <li><a href="">Features</a></li>
+                    <li><a href="">How It Works</a></li>
+                    <li><a href="">Why It's Different</a></li>
+                </ul>
+            <button class="btn">Get Early Access</button>
+        </nav>
+    </header>
+    <section id="banar">
+        <div class="banar-container">
+            <button class="access-btn">Early Access Now Open</button>
+            <div class="banar-content">
+                <p>A private space to store notes, links, and learning summaries — designed to <br>
+                help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            </div>
+            <div class="nav-btn">
+                <button class="btn">Start Building Your Vault</button>
+                <button class="btn">See How It Works</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
