--- a/index.html
+++ b/index.html
@@ -32,7 +32,53 @@
             </div>
             <div class="nav-btn">
                 <button class="btn">Start Building Your Vault</button>
-                <button class="btn">See How It Works</button>
+                <button class="btn button-play">See How It Works</button>
+            </div>
+        </div>
+    </section>
+    <section id="note">
+        <div class="section-heading">
+            <h2>Notes don't fail, Structure does.</h2>
+            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+        </div>
+        <div class="note-container">           
+            <div class="note-card">
+                <img src="images/Vector.png" alt="">
+                <h4>Scattered notes</h4>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>           
+            <div class="note-card">
+                <img src="images/Bookmarks.png" alt="">
+                <h4>Bookmark overload</h4>
+                <p>Hundreds of saved links you'll never revisit or remember.</p>
+            </div>           
+            <div class="note-card">
+                <img src="images/Brain.png" alt="">
+                <h4>No idea connections</h4>
+                <p>Insights stay isolated, never building into bigger understanding.</p>
+            </div>           
+            <div class="note-card">
+                <img src="images/Info.png" alt="">
+                <h4>Forgetting what <br>you learned</h4>
+                <p>Knowledge fades because there's no system to retain it.</p>
+            </div>           
+        </div>
+    </section>
+    <section id="brain">
+        <div class="brain-container">
+            <div class="brain-image">
+                <img src="images/knowledge.png" alt="">
+            </div>
+            <div class="brain-content">
+                <h6>THE SOLUTION</h6>
+                <h2>Your second brain, <br>structured by design.</h2>
+                <p>Personal Knowledge Vault isn't another note-taking app. z <br> It's a thinking environment where every note, link, and summary <br>becomes part of an interconnected web of understanding.</p>
+                <ul>
+                    <li><img src="images/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</li>
+                    <li><img src="images/CheckCircle.png" alt="">Connect related concepts automatically as you write</li>
+                    <li><img src="images/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</li>
+                    <li><img src="images/CheckCircle.png" alt="">Find anything instantly with semantic search</li>
+                </ul>
             </div>
         </div>
     </section>
