created access section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
             </div>
             <div class="nav-btn">
-                <button class="btn">Start Building Your Vault</button>
+                <button class="btn">Start Building Your Vault     <img src="images/ArrowRight.png" alt=""></button>
                 <button class="btn button-play">See How It Works</button>
             </div>
         </div>
@@ -82,5 +82,28 @@
             </div>
         </div>
     </section>
+    <section id="access">
+        <div class="access-container">
+            <div class="access-content">
+                <h2>Ready to think more clearly?</h2>
+                <p>Join thousands of learners who are building their personal knowledge vaults. <br>Start free, no credit card required.</p>
+                <button class="btn">Get Early Access        <img src="images/ArrowRight.png" alt=""></button>
+                <p class="para-two">Free during early access • No credit card needed</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-img">
+                    <img src="images/logo-footer.png" alt="">
+                </div>
+                <div class="social-link">
+                    <p>Social Links</p>
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
