created footer section wiht other correction

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B13 Assignment 01</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="inter">
@@ -25,14 +28,14 @@
     </header>
     <section id="banar">
         <div class="banar-container">
-            <button class="access-btn">Early Access Now Open</button>
+            <button class="access-btn"><img src="images/btn-icon.png" alt="">    Early Access Now Open</button>
             <div class="banar-content">
                 <p>A private space to store notes, links, and learning summaries — designed to <br>
                 help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
             </div>
             <div class="nav-btn">
                 <button class="btn">Start Building Your Vault     <img src="images/ArrowRight.png" alt=""></button>
-                <button class="btn button-play">See How It Works</button>
+                <button class="btn button-play">See How It Works <img src="images/Play.png" alt=""></button>
             </div>
         </div>
     </section>
@@ -66,20 +69,22 @@
     </section>
     <section id="brain">
         <div class="brain-container">
-            <div class="brain-image">
-                <img src="images/knowledge.png" alt="">
-            </div>
-            <div class="brain-content">
-                <h6>THE SOLUTION</h6>
-                <h2>Your second brain, <br>structured by design.</h2>
-                <p>Personal Knowledge Vault isn't another note-taking app. z <br> It's a thinking environment where every note, link, and summary <br>becomes part of an interconnected web of understanding.</p>
-                <ul>
-                    <li><img src="images/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</li>
-                    <li><img src="images/CheckCircle.png" alt="">Connect related concepts automatically as you write</li>
-                    <li><img src="images/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</li>
-                    <li><img src="images/CheckCircle.png" alt="">Find anything instantly with semantic search</li>
-                </ul>
-            </div>
+            <div class="section-container">
+                <div class="brain-image">
+                    <img src="images/knowledge.png" alt="">
+                </div>
+                <div class="brain-content">
+                    <h6>THE SOLUTION</h6>
+                    <h2>Your second brain, <br>structured by design.</h2>
+                    <p>Personal Knowledge Vault isn't another note-taking app. z <br> It's a thinking environment where every note, link, and summary <br>becomes part of an interconnected web of understanding.</p>
+                    <ul>
+                        <li><img src="images/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</li>
+                        <li><img src="images/CheckCircle.png" alt="">Connect related concepts automatically as you write</li>
+                        <li><img src="images/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</li>
+                        <li><img src="images/CheckCircle.png" alt="">Find anything instantly with semantic search</li>
+                    </ul>
+                </div>
+            </div>           
         </div>
     </section>
     <section id="access">
@@ -98,11 +103,17 @@
                 <div class="footer-img">
                     <img src="images/logo-footer.png" alt="">
                 </div>
-                <div class="social-link">
+                <div class="social-area">
                     <p>Social Links</p>
-                    <img src="" alt="">
+                    <div class="social-logo">
+                        <a href=""><img src="images/twiter.png" alt=""></a>
+                        <a href=""><img src="images/linkdin.png" alt=""></a>
+                        <a href=""><img src="images/facebook.png" alt=""></a>
+                    </div>                                        
                 </div>
             </div>
+            <div class="line"></div>
+            <p class="copyright">© 2026 Personal Knowledge Vault. All rights reserved.</p>
         </div>
     </footer>
 </body>
