created final for submission

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="banar-container">
             <button class="access-btn"><img src="images/btn-icon.png" alt="">    Early Access Now Open</button>
             <div class="banar-content">
+                <h1><span class="heading-frist">Structured thinking,</span> <br> <span class="heading-second">not just note-taking.</span></h1>
                 <p>A private space to store notes, links, and learning summaries — designed to <br>
                 help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
             </div>
